Created prototype of list view

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -39,10 +39,10 @@
         </a>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Map View</a>
+                <a class="nav-link {% if request.path == '/' %}active{% endif %} " href="{% url 'index' %}">Map View</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">List View</a>
+                <a class="nav-link {% if request.path == '/list/' %}active{% endif %}" href="{% url 'list_view' %}">List View</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
