--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/list.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/list.css
@@ -1,3 +1,14 @@
 .fas {
     color: #ff2400;
 }
+
+/* .dropdown-keyword-search {
+    position: absolute;
+    top: 30px;
+    right: 15px;
+} */
+
+.study_row {
+    cursor: pointer;
+}
+
