--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -20,6 +20,7 @@
             <!-- Map div
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
             <div id="map"></div>
+            <div id="timeline" class='ui-brush'></div>
         </div>
     </div>
 </div>
@@ -36,21 +37,22 @@
 <form class="form-inline dropdown-keyword-search">
     <label class="sr-only" for="search">Keyword Search</label>
     <input type="text" class="form-control my-1 mr-sm-2" id="search" placeholder="Search">
-    <label class="my-1 mr-2" for="reliability">Reliability</label>
-    <select class="custom-select my-1 mr-sm-2" id="reliability">
-        <option value="all">All</option>
-        <option value="yes">Reliable</option>
-        <option value="no">Not Reliable</option>
+    <label class="my-1 mr-2" for="category">Type of Study</label>
+    <select class="custom-select my-1 mr-sm-2" id="category">
+        <option value="">All</option>
+        <option value="ad">AD</option>
+        <option value="asd">ASD</option>
+        <option value="pdd">PDD</option>
     </select>
     <label class="my-1 mr-2" for="prevalence">Prevalence</label>
     <select class="custom-select my-1 mr-sm-2" id="prevalence">
         <option value="all">All</option>
         <option value="low">&lt;100</option>
-        <option value="med">100-250</option>
-        <option value="high">&gt;250</option>
+        <option value="med">100-200</option>
+        <option value="high">&gt;200</option>
     </select>
-    <label class="my-1 mr-2" for="population">Study Size</label>
-    <select class="custom-select my-1 mr-sm-2" id="population">
+    <label class="my-1 mr-2" for="study_size">Study Size</label>
+    <select class="custom-select my-1 mr-sm-2" id="study_size">
         <option value="all">All</option>
         <option value="low">&lt;10,000</option>
         <option value="med">10,000-100,000</option>
@@ -104,12 +106,13 @@
 <!-- Custom JS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script>
-    let min_year = "{{ min_year }}";
-    let max_year = "{{ max_year }}";
-    let min_population = "{{ min_population }}";
-    let max_population = "{{ max_population }}";
+    let min_year_of_publication = "{{ min_year_of_publication }}";
+    let max_year_of_publication = "{{ max_year_of_publication }}";
+    let min_study_size = "{{ min_study_size }}";
+    let max_study_size = "{{ max_study_size }}";
     let min_prevalence_rate = "{{ min_prevalence_rate }}";
     let max_prevalence_rate = "{{ max_prevalence_rate }}";
+    let category = "{{ category }}";
     let keyword = "{{ keyword }}";
 </script>
 <script src="{% static 'autism_prevalence_map/js/map.js' %}"></script>
