--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map1.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map1.html
@@ -1,4 +1,4 @@
-{% extends 'autism_prevalence_map/base.html' %} 
+{% extends 'autism_prevalence_map/base1.html' %} 
 
 {% load staticfiles %} 
 
@@ -7,7 +7,7 @@
 {% block css_block %}
 <!-- Custom map CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/map.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/map1.css' %}">
 {% endblock %} 
 
 
@@ -16,19 +16,19 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div class="container-fluid">    
     <div class="row">
-        <div class="col">
+        <div class="col no-padding-col">
             <!-- Map div
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
             <div id="map"></div>
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col no-padding-col">
             <!-- Timeline div
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->    
             <div class="timeline-wrapper container-fluid">
                 <div class="row">
-                    <div id="timeline-toggle" class='timeline-toggle col-sm-4'>
+                    <div id="timeline-toggle" class='timeline-toggle col-sm-3'>
                         <h2>Timeline of Studies</h2>
                         <span class="timeline-switch">
                             <input type="checkbox" id="timeline-switch" name="timeline-switch">
@@ -37,7 +37,7 @@
                         </span>
                         <span>Year Conducted</span>
                     </div>
-                    <div id="timeline" class='ui-brush timeline col-sm-8'></div>
+                    <div id="timeline" class='ui-brush timeline col-sm-9'></div>
                 </div>
             </div>
             
@@ -48,46 +48,20 @@
 <!-- Zoom buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <div id="zoom-buttons" class="zoom-buttons btn-group-vertical">
-    <button type="button" id="zoom-in" class="btn btn-dark"><i class="fas fa-plus"></i></button>
-    <button type="button" id="zoom-out" class="btn btn-dark"><i class="fas fa-minus"></i></button>
+    <button type="button" id="zoom-in" class="btn zoom-button"><i class="fas fa-plus"></i></button>
+    <button type="button" id="zoom-out" class="btn zoom-button"><i class="fas fa-minus"></i></button>
 </div>
 
-<!-- Keyword search and dropdown menu form
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<form class="form-inline dropdown-keyword-search">
-    <label class="sr-only" for="search">Keyword Search</label>
-    <input type="text" class="form-control my-1 mr-sm-2" id="search" placeholder="Search">
-    <label class="my-1 mr-2" for="methodology">Type of Study</label>
-    <select class="custom-select my-1 mr-sm-2" id="methodology">
-        <option value="">All</option>
-    </select>
-    <label class="my-1 mr-2" for="prevalence">Prevalence</label>
-    <select class="custom-select my-1 mr-sm-2" id="prevalence">
-        <option value="all">All</option>
-        <option value="low">&lt;100</option>
-        <option value="med">100-200</option>
-        <option value="high">&gt;200</option>
-    </select>
-    <label class="my-1 mr-2" for="study_size">Study Size</label>
-    <select class="custom-select my-1 mr-sm-2" id="study_size">
-        <option value="all">All</option>
-        <option value="low">&lt;10,000</option>
-        <option value="med">10,000-100,000</option>
-        <option value="high">&gt;100,000</option>
-    </select>
-    <button type="button" id="clear-filters" class="btn btn-warning my-1 mr-sm-2">Clear</button>
-    <button type="button" id="copy-link" class="btn btn-warning my-1 mr-sm-2" data-container="body" data-toggle="popover" data-placement="top" data-content="Link copied to the clipboard."><i class="fas fa-link"></i></button>
-    <a role="button" id="download-link" class="btn btn-warning my-1 mr-sm-2" href="#"><i class="fas fa-download"></i></a>
-</form>
+{% include "autism_prevalence_map/action_buttons.html" %}
 
 
 <!-- More Information Card
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div id="more-information-card" class="more-information-card col-sm-3">
+<div id="more-information-card" class="more-information-card col-3">
     <button type="button" class="close card-close" id="card-close" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
-    <div class="card">
+    <div class="card card-style">
         <div class="card-header" id="card-title">
         </div>
         <div class="card-body">
@@ -123,6 +97,13 @@
 {% endblock %} 
 
 {% block js_block %}
+<!-- Mapping JS libraries
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<script src="{% static 'autism_prevalence_map/vendor/js/topojson.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/vendor/js/d3-array.v1.min.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/vendor/js/d3-geo.v1.min.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/vendor/js/d3-geo-projection.v2.min.js' %}"></script>
+
 <!-- Custom JS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script>
@@ -134,7 +115,8 @@
     let max_prevalence_rate = "{{ max_prevalence_rate }}";
     let methodology = "{{ methodology }}";
     let keyword = "{{ keyword }}";
+    const world_atlas = "{% static 'autism_prevalence_map/vendor/data/110m.json' %}";
 </script>
-<script src="{% static 'autism_prevalence_map/js/joint.js' %}"></script>
-<script src="{% static 'autism_prevalence_map/js/map.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/js/joint1.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/js/map1.js' %}"></script>
 {% endblock %}
