--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/list.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/list.css
@@ -22,4 +22,12 @@
     cursor: pointer;
 }
 
+.list-more-information {
+    margin-left: 40px;
+}
+
+.list-more-information p {
+    line-height: 2;
+}
+
 
