--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/style.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/style.css
@@ -6,7 +6,9 @@ body {
     font-style: normal;
 }
 
-/* #methodology {
+
+
+/* #studytype {
     width: 100px;
 } */
 
@@ -17,13 +19,17 @@ body {
 }
 
 .spectrum-button {
-    background-color: #ff9900;
+    background-color: #34BBEC;
     color: #fff;
 }
 
+.centered-title {
+    margin-left: 22%;
+}
+/* 
 .navbar-brand-text {
     margin-left: 30px;
-}
+} */
 
 .spectrum-form {
     background-color: transparent;
@@ -62,10 +68,11 @@ body {
 /* bootstrap overrides */
 
 .navbar-brand {
-    font-size: 22px;
+    font-size: 24px;
     color: #fff !important;
-    letter-spacing: 1.5px;
     margin-top: 6px;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
 }
 
 .nav-tabs {
@@ -79,7 +86,8 @@ body {
 .nav-tabs .nav-link {
     color: #fff;
     margin-bottom: -16px;
-    padding-bottom: 17px;
+    padding: 0.5rem 0.5rem 17px 0.5rem;
+    /* padding-bottom: 17px; */
     border-bottom: 6px solid transparent;
     text-transform: uppercase;
     border-top: none;
@@ -107,7 +115,7 @@ body {
 
 .action-buttons {
     position: fixed;
-    top:72px;
+    top: 72px;
     right: 0;
     box-shadow: -1px 1px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -115,7 +123,7 @@ body {
 .action-buttons .action-button {
     border-radius: 0;
     background-color: #fff;
-    color: #c9c9c9;
+    color: #4d4d4d;
 }
 
 .no-padding-col {
@@ -153,19 +161,19 @@ body {
 }
 
 .dropdown-keyword-search label {
-    border: 1px solid #cccccc;
+    border: 1px solid #4d4d4d;
     padding: 5px;
     margin-bottom: -4px;
-    width: 100px;
-    background-color: #cccccc;
-    color: #212529;
+    width: 112px;
+    background-color: #4d4d4d;
+    color: #fff;
     font-size: 10px;
     text-transform: uppercase;
     display: block;
 }
 
 .dropdown-keyword-search select {
-    width: 100px;
+    width: 112px;
 }
 
 .dropdown-keyword-search .form-group {
