--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -14,8 +14,8 @@
     <div class="card-body">
         <form class="form">
             <div class="form-group">
-                <label class="" for="methodology">Type of Study</label>
-                <select class="custom-select" id="methodology">
+                <label class="" for="studytype">Type of study</label>
+                <select class="custom-select" id="studytype">
                     <option value="">All</option>
                 </select> 
             </div>
@@ -29,15 +29,29 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="" for="study_size">Study Size</label>
-                <select class="custom-select" id="study_size">
+                <label class="" for="samplesize">Sample size</label>
+                <select class="custom-select" id="samplesize">
                     <option value="all">All</option>
                     <option value="low">&lt;10,000</option>
                     <option value="med">10,000-100,000</option>
                     <option value="high">&gt;100,000</option>
                 </select>
             </div>
-            <button type="button" id="clear-filters" class="btn spectrum-button">Clear</button>
+            {% if template == "list" %}
+            <div class="form-group">
+                <label class="" for="min_yearpublished">Earliest</label>
+                <select class="custom-select" id="min_yearpublished">
+                    <option value="">Any</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label class="" for="max_yearpublished">Latest</label>
+                <select class="custom-select" id="max_yearpublished">
+                    <option value="">Any</option>
+                </select>
+            </div>
+            {% endif %}
+            <button type="button" id="clear-filters" class="btn btn-block spectrum-button">Clear filters</button>
         </form>
     </div>
 </div>
