--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -1,4 +1,4 @@
-{% extends 'autism_prevalence_map/base1.html' %} 
+{% extends 'autism_prevalence_map/base.html' %} 
 
 {% load staticfiles %} 
 
@@ -7,7 +7,7 @@
 {% block css_block %}
 <!-- Custom map CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/map1.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/map.css' %}">
 {% endblock %} 
 
 
@@ -29,13 +29,13 @@
             <div class="timeline-wrapper container-fluid">
                 <div class="row">
                     <div id="timeline-toggle" class='timeline-toggle col-sm-3'>
-                        <h2>Timeline of Studies</h2>
+                        <h2>Timeline of studies</h2>
                         <span class="timeline-switch">
                             <input type="checkbox" id="timeline-switch" name="timeline-switch">
-                            <label for="timeline-switch">Year Published</label>
+                            <label for="timeline-switch">Year published</label>
                             <span class="timeline-switch-knob"></span>
                         </span>
-                        <span>Year Conducted</span>
+                        <span>Year(s) studied</span>
                     </div>
                     <div id="timeline" class='ui-brush timeline col-sm-9'></div>
                 </div>
@@ -52,7 +52,7 @@
     <button type="button" id="zoom-out" class="btn zoom-button"><i class="fas fa-minus"></i></button>
 </div>
 
-{% include "autism_prevalence_map/action_buttons.html" %}
+{% include "autism_prevalence_map/action_buttons.html" with template="map" %}
 
 
 <!-- More Information Card
@@ -69,20 +69,20 @@
             <p class="card-text" id="card-country"></p>
             <h6 class="card-subtitle font-weight-bold">Area</h6>
             <p class="card-text" id="card-area"></p>
-            <h6 class="card-subtitle font-weight-bold">Population</h6>
-            <p class="card-text" id="card-population"></p>
-            <h6 class="card-subtitle font-weight-bold">Age</h6>
+            <h6 class="card-subtitle font-weight-bold">Sample size</h6>
+            <p class="card-text" id="card-samplesize"></p>
+            <h6 class="card-subtitle font-weight-bold">Age (years)</h6>
             <p class="card-text" id="card-age"></p>
-            <h6 class="card-subtitle font-weight-bold">Diagnostic Criteria</h6>
-            <p class="card-text" id="card-diagnostic_criteria"></p>
-            <h6 class="card-subtitle font-weight-bold">% with Normal IQ</h6>
-            <p class="card-text" id="card-pct_with_normal_iq"></p>
-            <h6 class="card-subtitle font-weight-bold">Gender Ratio</h6>
-            <p class="card-text" id="card-gender_ratio"></p>
-            <h6 class="card-subtitle font-weight-bold">Prevalence Rate</h6>
-            <p class="card-text" id="card-prevalence_rate"></p>
-            <h6 class="card-subtitle font-weight-bold">Confidence Interval</h6>
-            <p class="card-text" id="card-confidence_interval"></p>
+            <h6 class="card-subtitle font-weight-bold">Diagnostic criteria</h6>
+            <p class="card-text" id="card-diagnosticcriteria"></p>
+            <h6 class="card-subtitle font-weight-bold">Percent w/ average IQ</h6>
+            <p class="card-text" id="card-percentwaverageiq"></p>
+            <h6 class="card-subtitle font-weight-bold">Sex ratio (M:F)</h6>
+            <p class="card-text" id="card-sexratiomf"></p>
+            <h6 class="card-subtitle font-weight-bold">Prevalence (per 10,000)</h6>
+            <p class="card-text" id="card-prevalenceper10000"></p>
+            <h6 class="card-subtitle font-weight-bold">95% Confidence interval</h6>
+            <p class="card-text" id="card-confidenceinterval"></p>
         </div>
 
     </div>
@@ -107,16 +107,16 @@
 <!-- Custom JS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script>
-    let min_year_of_publication = "{{ min_year_of_publication }}";
-    let max_year_of_publication = "{{ max_year_of_publication }}";
-    let min_study_size = "{{ min_study_size }}";
-    let max_study_size = "{{ max_study_size }}";
-    let min_prevalence_rate = "{{ min_prevalence_rate }}";
-    let max_prevalence_rate = "{{ max_prevalence_rate }}";
-    let methodology = "{{ methodology }}";
+    let min_yearpublished = "{{ min_yearpublished }}";
+    let max_yearpublished = "{{ max_yearpublished }}";
+    let min_samplesize = "{{ min_samplesize }}";
+    let max_samplesize = "{{ max_samplesize }}";
+    let min_prevalenceper10000 = "{{ min_prevalenceper10000 }}";
+    let max_prevalenceper10000 = "{{ max_prevalenceper10000 }}";
+    let studytype = "{{ studytype }}";
     let keyword = "{{ keyword }}";
     const world_atlas = "{% static 'autism_prevalence_map/vendor/data/110m.json' %}";
 </script>
-<script src="{% static 'autism_prevalence_map/js/joint1.js' %}"></script>
-<script src="{% static 'autism_prevalence_map/js/map1.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/js/joint.js' %}"></script>
+<script src="{% static 'autism_prevalence_map/js/map.js' %}"></script>
 {% endblock %}
