--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -83,6 +83,11 @@
             <p class="card-text" id="card-prevalenceper10000"></p>
             <h6 class="card-subtitle font-weight-bold">95% Confidence interval</h6>
             <p class="card-text" id="card-confidenceinterval"></p>
+            <h6 class="card-subtitle font-weight-bold">Year(s) studied</h6>
+            <p class="card-text" id="card-yearsstudied"></p>
+            <h6 class="card-subtitle font-weight-bold">Category</h6>
+            <p class="card-text" id="card-categoryadpddorasd"></p>
+            <p class="card-text" id="card-links"></p>
         </div>
 
     </div>
