--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -7,6 +7,8 @@
 {% block css_block %}
 <!-- Custom map CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<link rel='stylesheet' id='main-stylesheet-css'  href='https://www.spectrumnews.org/wp-content/themes/sfari-spectrum/style.css?ver=1.1.3' type='text/css' media='all' />
+<link rel='stylesheet' id='spectrum-style-css'  href='https://www.spectrumnews.org/wp-content/themes/sfari-spectrum/css/spectrum.css?ver=1.1.3' type='text/css' media='all' />
 <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/about.css' %}">
 {% endblock %} 
 
