--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -3,7 +3,7 @@
 <div id="action-buttons" class="action-buttons btn-group-vertical">
     <button type="button" id="filters-link" class="btn action-button" data-toggle="tooltip" data-placement="top" title="Close fliter drawer"><i class="fas fa-ellipsis-v"></i></button>
     <a role="button" id="download-link" class="btn action-button" href="#" data-toggle="tooltip" data-placement="top" title="Download data"><i class="fas fa-download"></i></a>
-    <button type="button" id="help-link" class="btn action-button" data-toggle="tooltip" data-placement="top" title="Help"><i class="fas fa-question-circle"></i></button>
+    <a role="button" id="help-link" class="btn action-button" href="/about/#how-to-use" data-toggle="tooltip" data-placement="top" title="Help"><i class="fas fa-question-circle"></i></a>
     <button type="button" id="copy-link" class="btn action-button" data-container="body" data-toggle="popover" data-placement="left" data-content="Link copied to the clipboard."><i class="fas fa-link"></i></button>
 </div>
 
@@ -23,9 +23,9 @@
                 <label class="" for="prevalence">Prevalence</label>
                 <select class="custom-select" id="prevalence">
                     <option value="all">All</option>
-                    <option value="low">&lt;100</option>
-                    <option value="med">100-200</option>
-                    <option value="high">&gt;200</option>
+                    <option value="low">&lt;50</option>
+                    <option value="med">50-100</option>
+                    <option value="high">&gt;100</option>
                 </select>
             </div>
             <div class="form-group">
