Some work on styling and internal navigation for About page 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/js/about.js 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
@@ -2,6 +2,12 @@ body {
     margin-top: 150px;
 }
 
+#content-container.container,
+.hero-nav.container,
+.hero-nav.container .sidebar-container {
+    max-width: none;
+}
+
 .navbar-brand img {
     height: 39px;
     vertical-align: middle;
