--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
@@ -97,6 +97,10 @@
     position: relative; 
 }
 
+.timeline-toggle span {
+    display: none;
+}
+
 .timeline-switch > [type="checkbox"]:checked,
 .timeline-switch > [type="checkbox"]:not(:checked) {
     width: 0;
